k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieui
  labels:
    app: movieui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieui
  template:
    metadata:
      labels:
        app: movieui
   
    spec:
      containers:
        - name: movieui
          image: yklee2002/movieui
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
         
          
---
apiVersion: v1
kind: Service
metadata:
  name: movieui
spec:
  type: NodePort
  selector:
    app: movieui
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30104
